force-app/main/default/objects/Contact/fields/AsistenteComprador__c.field-meta.xml
<CustomField>
    <fullName>AsistenteComprador__c</fullName>
    <label>Asistente comprador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>