force-app/main/default/objects/Contact/fields/CategoriasPotencialInteres__c.field-meta.xml
<CustomField>
    <fullName>CategoriasPotencialInteres__c</fullName>
    <label>Categorías de Potencial Interés</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AIRES y CALEFACTORES</fullName>
            </value>
            <value>
                <fullName>AUTOMOCION</fullName>
            </value>
            <value>
                <fullName>BLANCOS TEXTIL</fullName>
            </value>
            <value>
                <fullName>DECORACION</fullName>
            </value>
            <value>
                <fullName>DEPORTES</fullName>
            </value>
            <value>
                <fullName>ENSERES MENORES</fullName>
            </value>
            <value>
                <fullName>HERRAMIENTAS</fullName>
            </value>
            <value>
                <fullName>LINEA BLANCA</fullName>
            </value>
            <value>
                <fullName>MENAJE</fullName>
            </value>
            <value>
                <fullName>PAPELERIA</fullName>
            </value>
            <value>
                <fullName>PINTURAS</fullName>
            </value>
            <value>
                <fullName>ROPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>