force-app/main/default/objects/Contact/fields/CP_BackToSchool__c.field-meta.xml
<CustomField>
    <fullName>CP_BackToSchool__c</fullName>
    <label>Back to school</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sillas ordenador</fullName>
                <label>Sillas y Mesas Oficina</label>
            </value>
            <value>
                <fullName>Mesas escritorios</fullName>
                <label>Gamers</label>
            </value>
            <value>
                <fullName>Complementos</fullName>
                <label>Complementos Escritorio</label>
            </value>
            <value>
                <fullName>infantil</fullName>
                <label>Mueble Infantil</label>
            </value>
            <value>
                <fullName>Mochilas escolares</fullName>
                <label>Mochilas y Accesorios</label>
            </value>
            <value>
                <fullName>Sets de mesas + sillas</fullName>
                <isActive>false</isActive>
                <label>Sets de mesas + sillas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>