force-app/main/default/objects/Contact/fields/CP_MueblesComedorYCocina__c.field-meta.xml
<CustomField>
    <fullName>CP_MueblesComedorYCocina__c</fullName>
    <label>Muebles de comedor y cocina</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Juegos de comedor</fullName>
                <label>Sets de Comedor</label>
            </value>
            <value>
                <fullName>Taburetes bar</fullName>
                <label>Taburetes/Bancos de Bar</label>
            </value>
            <value>
                <fullName>Carritos de apoyo cocina</fullName>
                <label>Muebles Auxiliares</label>
            </value>
            <value>
                <fullName>Complementos</fullName>
            </value>
            <value>
                <fullName>Barra de desayuno</fullName>
                <isActive>false</isActive>
                <label>Barra de desayuno</label>
            </value>
            <value>
                <fullName>Sets Ahorraespacio</fullName>
                <isActive>false</isActive>
                <label>Sets Ahorraespacio</label>
            </value>
            <value>
                <fullName>Sillas de espera y eventos</fullName>
                <isActive>false</isActive>
                <label>Sillas de espera y eventos</label>
            </value>
            <value>
                <fullName>Sillas metálicas</fullName>
                <isActive>false</isActive>
                <label>Sillas metálicas</label>
            </value>
            <value>
                <fullName>Sillas pata madera, y mesas a juego</fullName>
                <isActive>false</isActive>
                <label>Sillas pata madera, y mesas a juego</label>
            </value>
            <value>
                <fullName>Sillas plásticas</fullName>
                <isActive>false</isActive>
                <label>Sillas plásticas</label>
            </value>
            <value>
                <fullName>Sillas y taburetes plegables</fullName>
                <isActive>false</isActive>
                <label>Sillas y taburetes plegables</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>