force-app/main/default/objects/Contact/fields/CP_MueblesJardin__c.field-meta.xml
<CustomField>
    <fullName>CP_MueblesJardin__c</fullName>
    <label>Muebles de Jardín</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resina</fullName>
                <label>Resina y Plástico</label>
            </value>
            <value>
                <fullName>Mueble de Jardin</fullName>
            </value>
            <value>
                <fullName>Tumbonas y Balancines</fullName>
            </value>
            <value>
                <fullName>Carpas, Gazebos, Sombrillas, Bases y Balancines de Jardin</fullName>
                <label>Carpas, Gazebos y Sombrillas</label>
            </value>
            <value>
                <fullName>Almacenaje y Organización</fullName>
            </value>
            <value>
                <fullName>Decoración e Iluminación</fullName>
            </value>
            <value>
                <fullName>Infantil</fullName>
                <isActive>false</isActive>
                <label>Infantil</label>
            </value>
            <value>
                <fullName>Mesas de Jardín</fullName>
                <isActive>false</isActive>
                <label>Mesas de Jardín</label>
            </value>
            <value>
                <fullName>Mueble de Madera</fullName>
                <isActive>false</isActive>
                <label>Mueble de Madera</label>
            </value>
            <value>
                <fullName>Plastico</fullName>
                <isActive>false</isActive>
                <label>Plastico</label>
            </value>
            <value>
                <fullName>Rattan y Madera Imitación</fullName>
                <isActive>false</isActive>
                <label>Rattan y Madera Imitación</label>
            </value>
            <value>
                <fullName>Sillas, Sillones y Bancos</fullName>
                <isActive>false</isActive>
                <label>Sillas, Sillones y Bancos</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>