force-app/main/default/objects/Contact/fields/CP_MueblesSalaYHabitacion__c.field-meta.xml
<CustomField>
    <fullName>CP_MueblesSalaYHabitacion__c</fullName>
    <label>Muebles de Sala y Habitación</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sofas cama</fullName>
                <label>Sofas</label>
            </value>
            <value>
                <fullName>Sillones</fullName>
                <label>Sillones y Bancos</label>
            </value>
            <value>
                <fullName>Muebles de Recámara</fullName>
            </value>
            <value>
                <fullName>Muebles de Sala</fullName>
            </value>
            <value>
                <fullName>Muebles TV y percheros</fullName>
                <label>Muebles TV</label>
            </value>
            <value>
                <fullName>Libreros y decoración</fullName>
                <label>Estanterías y Repisas</label>
            </value>
            <value>
                <fullName>Muebles decoración</fullName>
                <label>Decoración e Iluminación de Interior</label>
            </value>
            <value>
                <fullName>Camas literas y transformers.</fullName>
                <isActive>false</isActive>
                <label>Camas literas y transformers.</label>
            </value>
            <value>
                <fullName>Mueble en KIT</fullName>
                <isActive>false</isActive>
                <label>Mueble en KIT</label>
            </value>
            <value>
                <fullName>Organización</fullName>
                <isActive>false</isActive>
                <label>Organización</label>
            </value>
            <value>
                <fullName>Sofas reclinables</fullName>
                <isActive>false</isActive>
                <label>Sofas reclinables</label>
            </value>
            <value>
                <fullName>Taburetes de salon</fullName>
                <isActive>false</isActive>
                <label>Taburetes de salon</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>