force-app/main/default/objects/Contact/fields/CP_OutdoorYTemporada__c.field-meta.xml
<CustomField>
    <fullName>CP_OutdoorYTemporada__c</fullName>
    <label>Outdoor y temporada</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BBQ, y fundas para barbacoas económicas.</fullName>
                <label>BBQ y Accesorios</label>
            </value>
            <value>
                <fullName>Sets de herramientas de Jardin</fullName>
                <label>Jardinería</label>
            </value>
            <value>
                <fullName>Playa</fullName>
            </value>
            <value>
                <fullName>Camping</fullName>
            </value>
            <value>
                <fullName>Decoración Jardin</fullName>
                <isActive>false</isActive>
                <label>Decoración Jardin</label>
            </value>
            <value>
                <fullName>Fumigadoras</fullName>
                <isActive>false</isActive>
                <label>Fumigadoras</label>
            </value>
            <value>
                <fullName>Hamaca hinchable</fullName>
                <isActive>false</isActive>
                <label>Hamaca hinchable</label>
            </value>
            <value>
                <fullName>Hornillos a gas</fullName>
                <isActive>false</isActive>
                <label>Hornillos a gas</label>
            </value>
            <value>
                <fullName>Mangueras</fullName>
                <isActive>false</isActive>
                <label>Mangueras</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>