force-app/main/default/objects/Contact/fields/CumpleanosComprador__c.field-meta.xml
<CustomField>
    <fullName>CumpleanosComprador__c</fullName>
    <label>Cumpleaños del comprador</label>
    <type>Date</type>
</CustomField>