force-app/main/default/objects/Contact/fields/EmailAsistenteComprador__c.field-meta.xml
<CustomField>
    <fullName>EmailAsistenteComprador__c</fullName>
    <label>Email asistente</label>
    <type>Email</type>
</CustomField>