force-app/main/default/objects/Contact/fields/EmailSupervisor__c.field-meta.xml
<CustomField>
    <fullName>EmailSupervisor__c</fullName>
    <label>Email Supervisor</label>
    <type>Email</type>
</CustomField>