force-app/main/default/objects/Contact/fields/ExtensionTelefono__c.field-meta.xml
<CustomField>
    <fullName>ExtensionTelefono__c</fullName>
    <label>Extensión de teléfono</label>
    <type>Phone</type>
</CustomField>