force-app/main/default/objects/Contact/fields/Genero__c.field-meta.xml
<CustomField>
    <fullName>Genero__c</fullName>
    <label>Genero</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mujer</fullName>
            </value>
            <value>
                <fullName>Hombre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>