force-app/main/default/objects/Contact/fields/Heating_Fan__c.field-meta.xml
<CustomField>
    <fullName>Heating_Fan__c</fullName>
    <label>Heating &amp; Fan</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ventiladores</fullName>
            </value>
            <value>
                <fullName>Purificadores &amp; Humidificadores</fullName>
            </value>
            <value>
                <fullName>Calefactores</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>