force-app/main/default/objects/Contact/fields/IDEA_Otras_Categor_as_RETAIL__c.field-meta.xml
<CustomField>
    <fullName>IDEA_Otras_Categor_as_RETAIL__c</fullName>
    <label>IDEA Otras Categorías RETAIL</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Línea Blanca</fullName>
            </value>
            <value>
                <fullName>Tecnología</fullName>
            </value>
            <value>
                <fullName>Juguetes</fullName>
            </value>
            <value>
                <fullName>Navidad</fullName>
            </value>
            <value>
                <fullName>Deportes</fullName>
            </value>
            <value>
                <fullName>Automoción</fullName>
            </value>
            <value>
                <fullName>Motos</fullName>
            </value>
            <value>
                <fullName>Colchones</fullName>
            </value>
            <value>
                <fullName>Papelería</fullName>
            </value>
            <value>
                <fullName>Ferretería</fullName>
            </value>
            <value>
                <fullName>Cocina y Hogar</fullName>
            </value>
            <value>
                <fullName>Moda</fullName>
            </value>
            <value>
                <fullName>Cuidado Personal</fullName>
            </value>
            <value>
                <fullName>Bebés</fullName>
            </value>
            <value>
                <fullName>Mascotas</fullName>
            </value>
            <value>
                <fullName>Farmacia</fullName>
            </value>
            <value>
                <fullName>Categorías Food</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>