force-app/main/default/objects/Contact/fields/Nombre_Comun__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Comun__c</fullName>
    <description>Como prefiere ser llamada la persona en el trato diario</description>
    <inlineHelpText>How the person prefers to be addressed in daily interactions</inlineHelpText>
    <label>Nombre Común</label>
    <length>100</length>
    <type>Text</type>
</CustomField>