force-app/main/default/objects/Contact/fields/Organizaci_n__c.field-meta.xml
<CustomField>
    <fullName>Organizaci_n__c</fullName>
    <label>Organización</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baño, Limpieza y Lavado</fullName>
            </value>
            <value>
                <fullName>Almacenaje y Ordenación</fullName>
            </value>
            <value>
                <fullName>Escaleras y Taburetes Taller</fullName>
            </value>
            <value>
                <fullName>Equipaje</fullName>
            </value>
            <value>
                <fullName>Accesorios Personales</fullName>
            </value>
            <value>
                <fullName>Seguridad del Hogar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>